--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,6 +209,7 @@
        "data": [
         {
          "type": "bar",
+         "uid": "99728b18-d7f2-11e8-92ab-0242ac110012",
          "x": [
           "jack",
           "jill",
@@ -224,10 +225,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"ae2b19bc-c7f7-465c-8a73-ee614ba601fb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ae2b19bc-c7f7-465c-8a73-ee614ba601fb\", [{\"type\": \"bar\", \"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"9c321ed5-88c8-4d4e-9cf8-f2c41ae857bf\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9c321ed5-88c8-4d4e-9cf8-f2c41ae857bf\", [{\"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10], \"type\": \"bar\", \"uid\": \"99d7872a-d7f2-11e8-92ab-0242ac110012\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"ae2b19bc-c7f7-465c-8a73-ee614ba601fb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ae2b19bc-c7f7-465c-8a73-ee614ba601fb\", [{\"type\": \"bar\", \"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"9c321ed5-88c8-4d4e-9cf8-f2c41ae857bf\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9c321ed5-88c8-4d4e-9cf8-f2c41ae857bf\", [{\"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10], \"type\": \"bar\", \"uid\": \"99d7872a-d7f2-11e8-92ab-0242ac110012\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
